fixed a bug on the timer setting the position to flex and center align and justify it

--- a/style.css
+++ b/style.css
@@ -202,6 +202,9 @@ body {
 }
 
 .quiz_box header .timer .timer_sec {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   font-weight: 500;
   font-size: 1.125rem;
   height: 3.125rem;
